Tiny css fix(to correctly display file uploading interface on mobiles)

--- a/src/main/webapp/style/category.css
+++ b/src/main/webapp/style/category.css
@@ -47,3 +47,9 @@
 .file-import .label:hover i, .file-import .label:hover .title {
     color: #ffffff
 }
+
+@media(max-width: 380px) {
+    .file-import .label {
+        width: 340px;
+    }
+}
